# gtest-demo

./: CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  Factorial.cpp
test/: CMakeLists.txt  test_calculations.cpp
